# big-data-madison-materialize

./: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
models/example/marts/: avg_bids.sql  num_bids.sql
models/example/sources/: auction.sql  sources.yml
